Yahoo quote fix and additional event message propagated to Trend bar charts